[gd_scene load_steps=4 format=2]

[ext_resource path="res://control_scenes/Keypad.gd" type="Script" id=1]
[ext_resource path="res://tiles/keypad_frame2.png" type="Texture" id=2]
[ext_resource path="res://tiles/keypad_key.png" type="Texture" id=3]

[node name="Keypad" type="Node2D"]

script = ExtResource( 1 )

[node name="Frame" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="Keys" type="Node2D" parent="." index="1"]

[node name="key9" type="Sprite" parent="Keys" index="0"]

position = Vector2( 11, 11 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="key8" type="Sprite" parent="Keys" index="1"]

position = Vector2( 6, 11 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="key1" type="Sprite" parent="Keys" index="2"]

position = Vector2( 1, 1 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="key2" type="Sprite" parent="Keys" index="3"]

position = Vector2( 6, 1 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="key3" type="Sprite" parent="Keys" index="4"]

position = Vector2( 11, 1 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="key4" type="Sprite" parent="Keys" index="5"]

position = Vector2( 1, 6 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="key5" type="Sprite" parent="Keys" index="6"]

position = Vector2( 6, 6 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="key6" type="Sprite" parent="Keys" index="7"]

position = Vector2( 11, 6 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="key7" type="Sprite" parent="Keys" index="8"]

position = Vector2( 1, 11 )
texture = ExtResource( 3 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]


